<resources>
    <string name="app_name">SAOApp</string>

    <string name="action_settings">Settings</string>

    <string name="edit_username">Enter a username</string>
    <string name="edit_password">Enter a password</string>
    <string name="edit_firstname">Enter a firstname</string>
    <string name="edit_lastname">Enter a lastname</string>
    <string name="edit_email">Enter email</string>

    <string name="hello_world">Hello</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
</resources>
